--- a/products.ipynb
+++ b/products.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
@@ -25,54 +25,7 @@
       "20              1488.63\n",
       "23              1572.05\n",
       "24              3726.45\n",
-      "26              2179.15\n",
-      "27              3138.48\n",
-      "31              5968.68\n",
-      "32              1147.68\n",
-      "33              3316.72\n",
-      "34              2352.46\n",
-      "39              2006.40\n",
-      "40              5480.53\n",
-      "41              3128.16\n",
-      "42              1933.60\n",
-      "43               604.10\n",
-      "44              1315.93\n",
-      "45              1151.76\n",
-      "47              2093.80\n",
-      "49              2190.80\n",
-      "50               190.54\n",
-      "51               668.22\n",
-      "53              1913.73\n",
-      "54              1229.35\n",
-      "55               170.17\n",
-      "62              4479.06\n",
-      "63              2812.32\n",
-      "64              3969.68\n",
-      "65              1047.48\n",
-      "66              3759.48\n",
-      "67              4826.70\n",
-      "69              1006.40\n",
-      "71              1973.34\n",
-      "72              4280.64\n",
-      "73               978.15\n",
-      "75              2557.94\n",
-      "79              5703.48\n",
-      "80              4302.40\n",
-      "81               247.74\n",
-      "82              1347.03\n",
-      "84               399.24\n",
-      "85               927.70\n",
-      "87              5113.62\n",
-      "88              1398.64\n",
-      "89               877.48\n",
-      "90              2587.08\n",
-      "93              1112.60\n",
-      "94               406.72\n",
-      "96              3248.07\n",
-      "97              1899.75\n",
-      "98              6962.24\n",
-      "99              1336.75\n",
-      "100             3540.80\n"
+      "26              2179.15\n"
      ]
     }
    ],
@@ -95,12 +48,12 @@
     "# make groupby\n",
     "df = df.groupby(\"product_id\").sum()\n",
     "# Print the resulting DataFrame\n",
-    "print(df.head(None))\n"
+    "print(df.head(15))\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 40,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -125,7 +78,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 41,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -148,104 +101,19 @@
       "12           lPBcnnwcIYchcj\n",
       "13          bCiTAZqqjcKvYWf\n",
       "14                  XLQiZXh\n",
-      "15            EQPiGonyhkocZ\n",
-      "16                    gBsuy\n",
-      "17          dZfTIdcndVjrWsy\n",
-      "18                   Elsvcn\n",
-      "19                    oOkDI\n",
-      "20              ZoEVfNBQslG\n",
-      "21           gFQmmHPKGBlzRy\n",
-      "22                    YKecC\n",
-      "23             rnYGyMejKjPU\n",
-      "24               YQgQAxnvUD\n",
-      "25          EKxrLfyddUGfwwd\n",
-      "26                sTDggtLsx\n",
-      "27                   lPFYVx\n",
-      "28             BYNGLChRWGbm\n",
-      "29             svmFbSAabMqC\n",
-      "30            ElVUiCfsLOilM\n",
-      "31                WGFkbkDtb\n",
-      "32                 CPvoBAYk\n",
-      "33               PAJwPDDXBR\n",
-      "34                   updxJA\n",
-      "35           HcAfBIZKwWCiHs\n",
-      "36            QHQRqMyGljKhL\n",
-      "37             EraiGUgAxjgN\n",
-      "38          AbYrwxljXjRrBSa\n",
-      "39               AvkzPDFttb\n",
-      "40                   viTUxb\n",
-      "41                 PHGqdLsP\n",
-      "42          TSqNNctcCocmUdT\n",
-      "43                  sunRXVd\n",
-      "44           eINbRkwCvRAAfm\n",
-      "45                    Zkuzr\n",
-      "46          icROydWrkoaaidx\n",
-      "47                  yMOOTYo\n",
-      "48                    vkzEL\n",
-      "49            IgRHhHkLsPqlI\n",
-      "50                 Gcpbslkp\n",
-      "51           ejEOVRytcwqLSq\n",
-      "52            CyRDwJTgGlzpZ\n",
-      "53               ycjDbiNigN\n",
-      "54                    SSukq\n",
-      "55                deRQJdITJ\n",
-      "56                  oNSGSCs\n",
-      "57                 lVqIvHFJ\n",
-      "58             GZkpZCDITdmU\n",
-      "59          yvGnHTWzrTDkOSu\n",
-      "60             pEoqssZzUolT\n",
-      "61                   QDDwLn\n",
-      "62                XNtKWqcoz\n",
-      "63               TNRaSJlebb\n",
-      "64            sXNwHwoCZqPYz\n",
-      "65                  wUylHRQ\n",
-      "66                    FVYpC\n",
-      "67                    xeIWm\n",
-      "68                  BjViLkS\n",
-      "69                 poGcCluM\n",
-      "70          xbAnMZdcYHKrcXA\n",
-      "71                    jpCAa\n",
-      "72          qmvhiVubdsrjVjW\n",
-      "73              rkLCkfUutkk\n",
-      "74              OosKGkSGJcO\n",
-      "75                 TIJiEOeS\n",
-      "76             ImECTUYcqSQd\n",
-      "77             ZJjQqLqSsNNf\n",
-      "78           tuUtaZGFqZXtLV\n",
-      "79           GQdzfWHocgCfAy\n",
-      "80                 aoAXtVPP\n",
-      "81                  FpQHCWe\n",
-      "82             SLNdhhcrxSJZ\n",
-      "83                 MeFlPcYo\n",
-      "84                  zsVzDtH\n",
-      "85               WBGPcViSXF\n",
-      "86              FvqylYvmtcK\n",
-      "87          VnAYxuQnzvstPBx\n",
-      "88                  ryvEGuC\n",
-      "89           rFeLDFAruuJImM\n",
-      "90                    Spxby\n",
-      "91                dmGBRQdUK\n",
-      "92                   zKfkyZ\n",
-      "93                yQSIuhlGf\n",
-      "94             xVgdSaytGNzh\n",
-      "95              UToniUVWbte\n",
-      "96           HFvpNNVhmAUgDZ\n",
-      "97           XEQvMgAJbTvjul\n",
-      "98                 jgwNeIfv\n",
-      "99               JQKpoVuMNj\n",
-      "100                 TBvydjC\n"
+      "15            EQPiGonyhkocZ\n"
      ]
     }
    ],
    "source": [
     "dt = pd.read_csv(\"products.csv\")\n",
     "dt = dt.iloc[:,1:3].set_index(\"product_id\")\n",
-    "print(dt.head(None))"
+    "print(dt.head(15))"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 42,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -268,60 +136,13 @@
       "20              1488.63      ZoEVfNBQslG\n",
       "23              1572.05     rnYGyMejKjPU\n",
       "24              3726.45       YQgQAxnvUD\n",
-      "26              2179.15        sTDggtLsx\n",
-      "27              3138.48           lPFYVx\n",
-      "31              5968.68        WGFkbkDtb\n",
-      "32              1147.68         CPvoBAYk\n",
-      "33              3316.72       PAJwPDDXBR\n",
-      "34              2352.46           updxJA\n",
-      "39              2006.40       AvkzPDFttb\n",
-      "40              5480.53           viTUxb\n",
-      "41              3128.16         PHGqdLsP\n",
-      "42              1933.60  TSqNNctcCocmUdT\n",
-      "43               604.10          sunRXVd\n",
-      "44              1315.93   eINbRkwCvRAAfm\n",
-      "45              1151.76            Zkuzr\n",
-      "47              2093.80          yMOOTYo\n",
-      "49              2190.80    IgRHhHkLsPqlI\n",
-      "50               190.54         Gcpbslkp\n",
-      "51               668.22   ejEOVRytcwqLSq\n",
-      "53              1913.73       ycjDbiNigN\n",
-      "54              1229.35            SSukq\n",
-      "55               170.17        deRQJdITJ\n",
-      "62              4479.06        XNtKWqcoz\n",
-      "63              2812.32       TNRaSJlebb\n",
-      "64              3969.68    sXNwHwoCZqPYz\n",
-      "65              1047.48          wUylHRQ\n",
-      "66              3759.48            FVYpC\n",
-      "67              4826.70            xeIWm\n",
-      "69              1006.40         poGcCluM\n",
-      "71              1973.34            jpCAa\n",
-      "72              4280.64  qmvhiVubdsrjVjW\n",
-      "73               978.15      rkLCkfUutkk\n",
-      "75              2557.94         TIJiEOeS\n",
-      "79              5703.48   GQdzfWHocgCfAy\n",
-      "80              4302.40         aoAXtVPP\n",
-      "81               247.74          FpQHCWe\n",
-      "82              1347.03     SLNdhhcrxSJZ\n",
-      "84               399.24          zsVzDtH\n",
-      "85               927.70       WBGPcViSXF\n",
-      "87              5113.62  VnAYxuQnzvstPBx\n",
-      "88              1398.64          ryvEGuC\n",
-      "89               877.48   rFeLDFAruuJImM\n",
-      "90              2587.08            Spxby\n",
-      "93              1112.60        yQSIuhlGf\n",
-      "94               406.72     xVgdSaytGNzh\n",
-      "96              3248.07   HFvpNNVhmAUgDZ\n",
-      "97              1899.75   XEQvMgAJbTvjul\n",
-      "98              6962.24         jgwNeIfv\n",
-      "99              1336.75       JQKpoVuMNj\n",
-      "100             3540.80          TBvydjC\n"
+      "26              2179.15        sTDggtLsx\n"
      ]
     }
    ],
    "source": [
     "all_data = pd.merge(df,dt,left_index=True,right_index=True)\n",
-    "print(all_data)"
+    "print(all_data.head(15))"
    ]
   },
   {
